--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.3",
     "http-proxy-middleware": "^2.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
@@ -23,6 +26,7 @@
     "nodemailer": "^6.7.8",
     "otp-generator": "^4.0.0",
     "socket.io": "^4.5.2",
-    "twilio": "^3.84.0"
+    "twilio": "^3.84.0",
+    "validator": "^13.9.0"
   }
 }
