--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server.js"
   },
-  "keywords": [],  
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "netlify-lambda": "^2.0.15",
     "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0",
     "socket.io": "^4.5.2",
     "twilio": "^3.84.0",
